<resources>
    <string name="app_name">入睡</string>
    <string name="str_sleep">开始睡眠</string>
    <string name="str_setting">设置</string>
    <string name="str_whiteNoise">助眠声</string>
    <string name="str_about">关于</string>
    <string name="str_alarmClock">闹钟</string>
    <string name="str_startSleep">开始睡眠</string>
    <string name="str_version">版本信息</string>
    <string name="str_slogen">入睡伴你入眠</string>
    <string name="str_stopSleep">上滑结束睡眠</string>
    <string name="str_sleepResult">入睡数据</string>
    <string name="str_ok">完成</string>
    <string name="str_wakeup">闹钟响了</string>
    <string name="toast_phonenum_null">手机号为空</string>
    <string name="toast_phonenum_err">手机号错误</string>
    <string name="toast_password_err">密码错误</string>
    <string name="toast_server_err">服务器错误</string>
    <string name="str_markApp">给入睡打分</string>
    <string name="str_fuckApp">吐槽入睡</string>
    <string name="str_alarmRemind">大概在%1$s小时后唤醒</string>
    <string name="str_notSet">未设置</string>
    <string name="str_slideDown">下滑小睡一会</string>
    <string name="str_share">分享</string>
    <string name="str_sleepRemind">预计睡眠%1$s小时</string>
    <string name="str_notSetAlarm">未设置闹钟</string>
    <string name="str_remindRegister">注册登录后即可同步数据</string>
    <string name="str_aboutDiscribe">繁杂世界\n简单入睡</string>
    <string name="str_aboutCompany">版权所有 ©2018 谱谱科技\n入睡®</string>
    <string name="str_login">登录</string>
    <string name="hint_login">输入手机号</string>
    <string name="str_passwordLogin">账号密码登录</string>
    <string name="str_goRegister">去注册</string>
    <string name="str_verifyCode">验证码</string>
    <string name="hint_verifyCode">输入6位验证码</string>
    <string name="str_request">提交</string>
    <string name="str_remindVerify">%1$ss 后可重试</string>
    <string name="str_retry">重试</string>
    <string name="str_remindVerifyPhone">已向%1$s发送短信，请留意</string>
    <string name="toast_code_err">请填写6位验证码</string>
    <string name="str_getVerifyCode">获取验证码</string>
    <string name="str_welcome">等你入睡</string>
    <string name="toast_welcome">欢迎进入入睡</string>
    <string name="hint_fuckApp">你可以畅所欲言~</string>
    <string name="str_noMarket">你的手机未安装应用市场</string>
    <string name="str_on">开启</string>
    <string name="str_off">关闭</string>
    <string name="str_mine">我的</string>
    <string name="str_user">用户</string>
    <string name="str_birth">诞辰(%1$s年%2$s月%3$s日)</string>
    <string name="str_weight">吨位</string>
    <string name="str_weight_kg">%1$skg</string>
    <string name="str_height_cm">%1$scm</string>
    <string name="str_height">海拔</string>
    <string name="str_email_addr">two_days@yeah.net</string>
    <string name="hint_asmr">建议佩戴耳机享受ASMR</string>
    <string name="str_sleepDuration">共%1$sh%2$sm</string>
    <string name="str_sleepData">睡过的</string>
    <string name="str_say_something">你还什么都没说呢</string>
    <string name="str_feedback_success">感谢反馈</string>
</resources>
