<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bule_1">

    <EditText
        android:id="@+id/et_code"
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:hint="@string/hint_verifyCode"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <com.pupu.rushui.widget.LoadingButton
        android:id="@+id/btn_request"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/et_code"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_round"
        android:text="@string/str_request"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_request"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/str_remindVerifyPhone"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_remind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/str_passwordLogin"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />
</RelativeLayout>