<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bule_1">

    <RelativeLayout
        android:id="@+id/layout_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tv_prePhoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:text="+86"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_prePhoneNum"
            android:background="@color/white" />

        <EditText
            android:id="@+id/et_phoneNum"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_prePhoneNum"
            android:hint="@string/hint_login"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp">

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <com.pupu.rushui.widget.LoadingButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/layout_phoneNum"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_round"
        android:text="@string/str_getVerifyCode"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/str_passwordLogin"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>