<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bule_1"
    android:orientation="vertical">

    <include layout="@layout/layout_topbar" />

    <LinearLayout
        android:id="@+id/layout_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="闹钟"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginRight="16dp"
                android:src="@mipmap/img_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="未设置"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/sb_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:thumbTint="@color/light_yellow"
                android:trackTint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_zaoshui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="早睡提醒"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/img_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_whiteNoise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/str_whiteNoise"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/img_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_markApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/str_markApp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/img_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fuckApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/str_fuckApp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/img_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/str_share"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/img_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/str_about"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/img_arrow_right" />
    </LinearLayout>

</LinearLayout>